# rust-advent2024

./: '  .gitignore  .ocamlinit  AdventStd.ml  README.md  a.out  day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  dune  getInput.sh  input.ml  runDay.sh  standard.cmi  standard.cmo  standard.ml
_input/: inputtest4.txt
adventocaml/: adventocaml.opam  dune-project
adventocaml/lib/: dune
adventocaml/test/: dune
day1/: day1  day1.ml  day1.rs
day1/adventday1/: '  dune-project
day1/adventday1/_build/: .db  .digest-db  log
day1/adventday1/_build/default/: adventday1.dune-package  adventday1.install
day1/adventday1/_build/default/.dune/: configurator  configurator.v2
day1/adventday1/_build/default/lib/: adventday1.cma  adventday1.cmxa  adventday1.cmxs  adventday1.ml-gen
day1/adventday1/_build/default/lib/.adventday1.objs/: adventday1__Main.impl.d
day1/adventday1/_build/default/lib/.adventday1.objs/byte/: adventday1.cmi  adventday1.cmo  adventday1.cmt  adventday1__Main.cmi  adventday1__Main.cmo  adventday1__Main.cmt
day1/adventday1/_build/default/lib/.adventday1.objs/native/: adventday1.cmx  adventday1__Main.cmx
day1/adventday1/_build/default/lib/.merlin-conf/: lib-adventday1
day1/adventday1/_build/default/test/.merlin-conf/: exe-test_adventday1
day1/adventday1/lib/: dune  main.ml
day1/adventday1/test/: dune
day2/: day2  day2.out  ocamlmycaml.cmi  ocamlmycaml.cmo  ocamlmycaml.ml
day3/: day3  day3.cmi  day3.cmo  day3.ml  reqs
day4/: day4.cmi  day4.cmo  day4.ml  input:Zone.Identifier
tutorial/: Cargo.toml
tutorial/src/: main.rs
(+6 files in other folders)
