(executable
  (name input)
  (libraries cohttp cohttp-lwt-unix lwt.unix))
(env
  (dev
    (ocamlopt_flags (:standard -O3))
    (flags (:standard  -w -32 ))
  ))
; (library (name AdventStd))
(executable (name day1 ) (modules Day1))
(executable (name day2 )(modules Day2))
(executable (name day3 )(modules Day3))
(executable (name day4 )(modules Day4 AdventStd) )
; (executable (name day1 ))

